# screenpipe

./: Cargo.toml  README.md
.github/scripts/: cloud_setup.sh
.github/workflows/: e2e-macos.yml  release-app.yml  release-cli.yml  release-enterprise.yml
apps/screenpipe-app-tauri/app/notification-panel/: page.tsx
apps/screenpipe-app-tauri/components/: chat-sidebar.tsx  notification-handler.tsx
apps/screenpipe-app-tauri/components/__tests__/: chat-sidebar-grouping.test.ts
apps/screenpipe-app-tauri/components/chat/: chat-history-view.tsx
apps/screenpipe-app-tauri/components/chat/standalone/: chat-composer.tsx  upgrade-quota-banner.tsx
apps/screenpipe-app-tauri/components/chat/standalone/hooks/: use-pi-foreground-events.ts
apps/screenpipe-app-tauri/components/hooks/: use-chat-conversations.ts
apps/screenpipe-app-tauri/components/onboarding/: connect-apps.tsx
apps/screenpipe-app-tauri/components/rewind/: ai-presets-selector.tsx  timeline.tsx
apps/screenpipe-app-tauri/components/rewind/timeline/: timeline-controls.tsx
apps/screenpipe-app-tauri/components/settings/: agent-card.tsx  ai-presets.tsx  archive-settings.tsx  connections-section.tsx  pipe-schedule-builder.test.tsx  pipe-schedule-builder.tsx  pipes-section.tsx  recording-settings.tsx  remote-agent-card.tsx
apps/screenpipe-app-tauri/components/ui/: help-tooltip.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md  coverage-map.json
apps/screenpipe-app-tauri/e2e/specs/: brain-section.spec.ts  chat-sidebar-groups.spec.ts  html-artifact-render.spec.ts
apps/screenpipe-app-tauri/lib/: auth-guard.test.tsx  auth-guard.tsx  chat-storage.ts  sidebar-grouping.ts  upsell-gating.ts
apps/screenpipe-app-tauri/lib/__tests__/: sidebar-grouping.test.ts  upsell-gating.test.ts
apps/screenpipe-app-tauri/lib/constants/: connections.ts
apps/screenpipe-app-tauri/lib/hooks/: use-hardcoded-tiles.ts  use-model-upsell-gating.ts  use-settings.tsx  use-usage-status.tsx
apps/screenpipe-app-tauri/lib/stores/: chat-store.ts  pi-event-router.ts
apps/screenpipe-app-tauri/lib/utils/: chat-sidebar-grouping.ts  recommend-connections.test.ts  recommend-connections.ts  schedule-builder.test.ts  schedule-builder.ts  schedule-format.test.ts  schedule-format.ts  tauri.ts
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml
apps/screenpipe-app-tauri/src-tauri/src/: analytics.rs  auth_token.rs  commands.rs  main.rs  recording.rs  remote_sync_commands.rs  server.rs  shortcuts.rs  store.rs  sync.rs
apps/screenpipe-app-tauri/src-tauri/src/window/: show.rs
apps/screenpipe-app-tauri/src-tauri/swift/: notification_panel.swift
crates/screenpipe-a11y/src/platform/: macos.rs
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-audio/src/device/: device_manager.rs
crates/screenpipe-connect/src/: remote_sync.rs
crates/screenpipe-connect/src/connections/: hermes.rs  mod.rs
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-core/src/pipes/: mod.rs  permissions.rs
crates/screenpipe-core/src/sync/: manager.rs  mod.rs
crates/screenpipe-engine/src/: analytics.rs  archive.rs  auth_key.rs  meeting_detector.rs  pipes_api.rs  resource_monitor.rs  server.rs  sync_api.rs  sync_provider.rs
crates/screenpipe-engine/src/cli/: agent.rs  login.rs  mod.rs  service.rs  store_file.rs  sync.rs
crates/screenpipe-secrets/: Cargo.toml
crates/screenpipe-secrets/src/: lib.rs  store.rs
docs/mintlify/docs-mintlify-mig-tmp/: changelog.mdx  cloud-archive.mdx  connection-reference.mdx  second-brain.mdx
