[package]
name = "screenpipe-core"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[dependencies]
screenpipe-events = { path = "../screenpipe-events" }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar", rev = "b0f48a514235d1278d860f4a0af66aa9d6e1618d" }
log = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }

tokio = { workspace = true }

# Security
regex = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

tracing = { workspace = true }


dirs = { workspace = true }
clap = { workspace = true }

# random
rand = { workspace = true }

uuid = { workspace = true }

# Cloud sync encryption
argon2 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
reqwest = { workspace = true }
hex = { workspace = true, optional = true }
async-trait = { workspace = true }
screenpipe-secrets = { path = "../screenpipe-secrets", optional = true }
screenpipe-vault = { path = "../screenpipe-vault", optional = true }
# Shared sync primitives. `upload_to_s3` delegates to
# `screenpipe_sync::HttpPutDirect` so the retry / bytes-pool / cancellation
# code path is the same one ee/ uses. Gated to the cloud-sync feature so
# consumer builds without sync don't pay the dep cost.
screenpipe-sync = { path = "../screenpipe-sync", optional = true }

once_cell = { workspace = true }

cron = "0.13.0"

serde_yaml = { workspace = true }
chrono = { workspace = true }
chrono-tz = "0.10"
tempfile = { workspace = true }

[features]
default = ["security"]
# objc's msg_send! emits #[cfg(feature = "cargo-clippy")] gates internally;
# declaring the feature silences "unexpected cfg" warnings in macOS builds
# without changing behavior (it's never enabled at compile time).
cargo-clippy = []
security = ["dep:regex", "dep:lazy_static"]
secrets = ["dep:screenpipe-secrets", "dep:screenpipe-vault"]
cloud-sync = [
    "dep:argon2",
    "dep:chacha20poly1305",
    "dep:hmac",
    "dep:sha2",
    "dep:base64",
    "dep:zeroize",
    "dep:thiserror",
    "dep:screenpipe-sync",
    "dep:hex",
]

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# accessibility-sys = "0.1.3"
accessibility-sys = { workspace = true }
# accessibility = "0.1.6"
accessibility = { git = "https://github.com/eiz/accessibility.git", rev = "173e898d4a52ee0afe0224ecb458d324057856e7" }
objc = { workspace = true }
objc-foundation = "0.1.1"

core-foundation = { workspace = true }
core-graphics = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
uiautomation = { workspace = true }
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
# Used by sync::client wire-compat test (asserts the PUT request shape
# stays byte-identical after the upload_to_s3 → HttpPutDirect migration).
wiremock = { workspace = true }
